--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,4 +17,13 @@ spring:
   flyway:
     baseline-on-migrate: true
     validate-on-migrate: true
-debug: true
+logging:
+  file:
+    name: store.log
+  logback:
+    rollingpolicy:
+      file-name-pattern: store-%d{yyyy-MM-dd}.%i.log
+      max-file-size: 100KB
+      total-size-cap: 1MB
+      max-history: 14
+      clean-history-on-start: true
