--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'org.modelmapper:modelmapper:3.1.0'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop
 	implementation 'org.springframework.boot:spring-boot-starter-aop:2.7.0'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
 }
 
