--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,6 +17,9 @@ spring:
   flyway:
     baseline-on-migrate: true
     validate-on-migrate: true
+  thymeleaf:
+    prefix: file:src/main/resources/templates/
+    cache: false
 logging:
   file:
     name: store.log
